kubernetes-lab/module-03/product-catalog-service-broken.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog
  labels:
    app: product-catalog
spec:
  type: ClusterIP
  selector:
    app: product-catalog-wrong
  ports:
    - port: 80
      targetPort: 5678
      protocol: TCP
