kubernetes-lab/module-03/product-catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog
  labels:
    app: product-catalog
spec:
  type: ClusterIP
  selector:
    app: product-catalog
  ports:
    - name: http
      port: 80
      targetPort: 5678
      protocol: TCP
